# Ray_Tracer

./: .gitignore  Cargo.toml  README.md
.cargo/: config
python/: addon.py
src/: aabb.rs  camera.rs  colour.rs  lib.rs  main.rs  ray.rs  util.rs  vec3.rs
src/hit/: bvh.rs  constant_medium.rs  hitable_list.rs  instancing.rs  mod.rs  rectangle.rs  sphere.rs  triangle.rs
src/material/: dielectric.rs  emission.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
