[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["David Hinton <hintondavid11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
rayon = "1.3.0"
indicatif = "0.14.0"

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]