[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["David Hinton <hintondavid11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
indicatif = {version = "*", features = ["with_rayon"]}

[lib]
name = "ray_tracer"
crate-type = ["rlib", "cdylib"]

[dependencies.image]
version = "0.23.4"
default-features = false	#do this to reduce compile time.
features = ["png"]

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]